# AndroidDevelopmentPractices

./: .gitignore  README.md
ASanTest/: settings.gradle
ASanTest/app/: build.gradle
ASanTest/app/src/main/: AndroidManifest.xml
ASanTest/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ASanTest/gradle/wrapper/: gradle-wrapper.properties
AndroidASMSample/: build.gradle  gradle.properties  keystore.properties  settings.gradle
AndroidASMSample/ASMGradlePlugins/: build.gradle
AndroidASMSample/app/: build.gradle
AndroidASMSample/app/src/main/: AndroidManifest.xml
AndroidASMSample/gradle/wrapper/: gradle-wrapper.properties
AndroidComposeExamples/: settings.gradle
AndroidComposeExamples/app/: build.gradle
AndroidComposeExamples/app/src/main/: AndroidManifest.xml
AndroidComposeExamples/gradle/wrapper/: gradle-wrapper.properties
AndroidDoubleColorBall/: build.gradle  settings.gradle
AndroidDoubleColorBall/ScrollView/: build.gradle
AndroidDoubleColorBall/ScrollView/src/main/: AndroidManifest.xml
AndroidDoubleColorBall/app/: build.gradle
AndroidDoubleColorBall/app/src/main/: AndroidManifest.xml
AndroidDoubleColorBall/gradle/wrapper/: gradle-wrapper.properties
AndroidGradlePluginsSample/: gradle.properties  settings.gradle
AndroidGradlePluginsSample/GradlePluginInBuildScript/: build.gradle
AndroidGradlePluginsSample/StandaloneGradlePluginProject/: build.gradle
AndroidGradlePluginsSample/app/: build.gradle
AndroidGradlePluginsSample/app/src/main/: AndroidManifest.xml
AndroidGradlePluginsSample/buildSrc/: build.gradle
AndroidGradlePluginsSample/gradle/wrapper/: gradle-wrapper.properties
AndroidHttpsServer/: build.gradle  settings.gradle
AndroidHttpsServer/app/: build.gradle
AndroidHttpsServer/app/src/main/: AndroidManifest.xml
AndroidHttpsServer/gradle/wrapper/: gradle-wrapper.properties
AndroidJetpackComposeSample/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
AndroidJetpackComposeSample/AcodecMobile/: build.gradle.kts
AndroidJetpackComposeSample/AcodecMobile/src/main/cpp/: CMakeLists.txt  acodecmobile.cpp
AndroidJetpackComposeSample/AcodecMobile/src/main/cpp/opencv/sdk/native/jni/: OpenCVConfig.cmake
AndroidJetpackComposeSample/AcodecMobile/src/main/cpp/opencv/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake
AndroidJetpackComposeSample/AudioRecordUtils/: build.gradle.kts
AndroidJetpackComposeSample/CommonLib/: build.gradle.kts
AndroidJetpackComposeSample/CommonNavigation/: build.gradle.kts
AndroidJetpackComposeSample/CommonUI/: build.gradle  build.gradle.kts
AndroidJetpackComposeSample/CommonUIComponent/: build.gradle.kts
AndroidJetpackComposeSample/CommonUtils/: build.gradle  build.gradle.kts
AndroidJetpackComposeSample/FFmpegMobile/: build.gradle.kts
AndroidJetpackComposeSample/FFmpegMobile/src/main/cpp/: CMakeLists.txt  common.h  decode_av.cpp  decode_av.h  ffmpeg_mobile.cpp
AndroidJetpackComposeSample/FFmpegMobile/src/main/cpp/include/libavcodec/: avcodec.h  avdct.h  codec.h  codec_id.h  codec_par.h  vaapi.h  vdpau.h
AndroidJetpackComposeSample/FFmpegMobile/src/main/cpp/include/libavformat/: avformat.h
AndroidJetpackComposeSample/FFmpegMobile/src/main/cpp/include/libavutil/: avstring.h  base64.h  frame.h
AndroidJetpackComposeSample/FFmpegStudyComponent/: build.gradle.kts
AndroidJetpackComposeSample/FastMvvm/: build.gradle.kts
AndroidJetpackComposeSample/IM/: build.gradle.kts
AndroidJetpackComposeSample/IM/src/main/: AndroidManifest.xml
AndroidJetpackComposeSample/IMCallComponent/: build.gradle.kts
AndroidJetpackComposeSample/IMChat/: build.gradle.kts
AndroidJetpackComposeSample/IMChatComponent/: build.gradle.kts
AndroidJetpackComposeSample/IMCommonUI/: build.gradle.kts
AndroidJetpackComposeSample/IMContact/: build.gradle.kts
AndroidJetpackComposeSample/IMContactComponent/: build.gradle.kts
AndroidJetpackComposeSample/IMConversation/: build.gradle.kts
AndroidJetpackComposeSample/IMConversationComponent/: build.gradle.kts
AndroidJetpackComposeSample/IMCore/: build.gradle.kts
AndroidJetpackComposeSample/IMDiscoverComponent/: build.gradle.kts
AndroidJetpackComposeSample/IMUserComponent/: build.gradle.kts
AndroidJetpackComposeSample/KtStateMachine/: build.gradle.kts
AndroidJetpackComposeSample/LibRtmpSample/: build.gradle  build.gradle.kts
AndroidJetpackComposeSample/LocalAAR/WebRTC/: build.gradle.kts
AndroidJetpackComposeSample/NoticeComponent/: build.gradle.kts
AndroidJetpackComposeSample/OpenCVMobile/: build.gradle.kts
AndroidJetpackComposeSample/OpenCVMobile/src/main/cpp/: CMakeLists.txt  common.h  opencv_mobile.cpp
AndroidJetpackComposeSample/OpenCVMobile/src/main/cpp/opencv/sdk/native/jni/: OpenCVConfig.cmake
AndroidJetpackComposeSample/RtmpMobile/: build.gradle.kts
AndroidJetpackComposeSample/RtmpMobile/src/main/cpp/: CMakeLists.txt  RtmpClient.cpp  RtmpClient.h  common.h  io.cpp  io.h  rtmp_mobile.cpp
AndroidJetpackComposeSample/RtmpMobile/src/main/cpp/librtmp/: CMakeLists.txt  amf.c  handshake.h  rtmp.c
AndroidJetpackComposeSample/SettingComponent/: build.gradle.kts
AndroidJetpackComposeSample/SocketIOMobile/: build.gradle.kts
AndroidJetpackComposeSample/UserComponent/: build.gradle.kts
AndroidJetpackComposeSample/WebrtcMobile/: build.gradle.kts
AndroidJetpackComposeSample/YuvUtil/: build.gradle.kts
AndroidJetpackComposeSample/app/: build.gradle  build.gradle.kts
AndroidJetpackComposeSample/buildSrc/: build.gradle.kts
AndroidJetpackComposeSample/ffmpeg/: build.gradle  build.gradle.kts
AndroidJetpackComposeSample/gradle/wrapper/: gradle-wrapper.properties
AndroidMultiProcessClientSample/app/: build.gradle
AndroidMultiProcessServerSample/: README.md
AndroidMultiProcessServerSample/app/: build.gradle
ComposePlane/: settings.gradle
ComposePlane/app/: build.gradle
ComposePlane/gradle/wrapper/: gradle-wrapper.properties
LooperLinearLayoutManager/: settings.gradle
LooperLinearLayoutManager/app/: build.gradle
LooperLinearLayoutManager/gradle/wrapper/: gradle-wrapper.properties
(+806 files in other folders)
